# bolsa-futuro-digital-2025

atividade_01/src/app/: main.py
atividade_01/src/i_calculadora/: calculadora.py
atividade_02/: pyproject.toml
atividade_02/src/app/: animal.py  main.py
atividade_03/src/app/: exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py  exercicio_07.py  exercicio_08.py  exercicio_09.py  exercicio_10.py  exercicio_11.py  exercicio_12.py  exercicio_13.py  exercicio_14.py  exercicio_15.py
atividade_04/: pyproject.toml
atividade_04/src/app/: exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_06.py  exercicio_07.py
atividade_04/src/app/condicionais/: exercicio_01.py  exercicio_05.py  exercicio_08.py  exercicio_09.py  exercicio_10.py
atividade_04/src/app/lacos_de_repeticao/: exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py  exercicio_07.py  exercicio_08.py  exercicio_09.py  exercicio_10.py  exercicio_11.py  exercicio_12.py  exercicio_13.py  exercicio_14.py  exercicio_15.py  exercicio_16.py  exercicio_17.py  exercicio_18.py  exercicio_19.py  exercicio_20.py
i_calculadora/: pyproject.toml
i_calculadora/src/i_calculadora/: main.py
i_calculadora/tests/: test_calculadora.py
