[project]
name = "i-calculadora"
version = "0.1.0"
description = ""
authors = [{ name = "Kacaii", email = "kacaii.privado@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pytest (>=8.4.1,<9.0.0)"]

[tool.poetry]
packages = [{ include = "i_calculadora", from = "src" }]

[tool.poetry.scripts]
start = "i_calculadora.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
